testcases/bad/test13.tig
/* Error: comparison of incompatible types */

3 > "df"
